[gd_scene load_steps=7 format=3 uid="uid://cglfkq1133j8f"]

[ext_resource type="Script" path="res://scripts/mesa_despalha.gd" id="1_fu7nj"]
[ext_resource type="Texture2D" uid="uid://co2i73dx8mf7" path="res://assets/16_Grocery_Store_Singles_Shadowless_32x32/Grocery_Store_Singles_Shadowless_32x32_261.png" id="2_2v6ow"]
[ext_resource type="PackedScene" uid="uid://inyorttohhcr" path="res://scenes/interativo.tscn" id="2_7pio5"]
[ext_resource type="PackedScene" uid="uid://drnnayddmjjre" path="res://scenes/objetos/bau.tscn" id="3_wofrv"]
[ext_resource type="PackedScene" uid="uid://d8x4i3rb07lu" path="res://scenes/task_timer.tscn" id="4_iir5s"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wu6pv"]
size = Vector2(60, 26)

[node name="MesaDespalha" type="Node2D" groups=["mesa_despalha"]]
script = ExtResource("1_fu7nj")

[node name="Interativo" parent="." instance=ExtResource("2_7pio5")]

[node name="Sprite2D" type="Sprite2D" parent="Interativo"]
texture = ExtResource("2_2v6ow")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interativo"]
position = Vector2(0, -5)
shape = SubResource("RectangleShape2D_wu6pv")

[node name="MilhoComPalha" type="Node2D" parent="."]

[node name="BauMilho" parent="." instance=ExtResource("3_wofrv")]

[node name="BauPalha" parent="." instance=ExtResource("3_wofrv")]
position = Vector2(45, 1)

[node name="TaskTimer" parent="." instance=ExtResource("4_iir5s")]
position = Vector2(0, -32)

[node name="soundEffect" type="AudioStreamPlayer2D" parent="."]

[connection signal="task_ended" from="TaskTimer" to="." method="_on_task_timer_task_ended"]
